# tupl

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  yeet.rs
src/: lib.rs
tupl/: Cargo.toml  README.md  build.rs
tupl-macros/: Cargo.toml  README.md
tupl-macros/src/: impls.rs  lib.rs  traits.rs  util.rs
tupl/src/: fns.rs  lib.rs  util.rs  visit.rs
tupl/src/fns/: future.rs  iter.rs  option.rs  result.rs  stream.rs
tupl/src/visit/: any.rs
