[package]
name = "tupl-macros"
description = "Macros used by the tupl crate."
authors = ["Dragoteryx"]
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/Dragoteryx/tupl"
license = "MIT OR Apache-2.0"
keywords = ["tuple", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
