[package]
name = "tupl"
description = "Perform generic operations on tuples."
authors = ["Dragoteryx"]
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/Dragoteryx/tupl"
license = "MIT OR Apache-2.0"
keywords = ["tuple"]

[dependencies.futures]
default-features = false
version = "0.3"

[dependencies.tupl-macros]
path = "../tupl-macros"
version = "0.6.0"
