[package]
name = "tupl"
description = "Perform generic operations on tuples."
authors = ["Dragoteryx"]
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/Dragoteryx/tupl"
license = "MIT OR Apache-2.0"
keywords = ["tuple"]

[dependencies.tupl-macros]
path = "../tupl-macros"
version = "0.6"

[build-dependencies]
rustc_version = "0.4"

[package.metadata.docs.rs]
all-features = true